src/Feature Assignment 4/objects/Bypass_Logic__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to manage bypass logic for validation rules, triggers, flows on records.</description>
    <fields>
        <fullName>Bypass_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects_to_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objects to Bypass</label>
        <type>Checkbox</type>
    </fields>
    <label>Bypass Logic</label>
</CustomObject>